--- a/node.html
+++ b/node.html
@@ -33,7 +33,7 @@
     <input type="text" id="node-input-model_id" placeholder="Model ID"/>
     <br/>
     <input type="checkbox" id="node-input-only_firstline"/>
-     Only first line
+     Only first phrase
   </div>
 </script>
 
